--- a/zomes/mutual_credit_clearing/code/Cargo.toml
+++ b/zomes/mutual_credit_clearing/code/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 serde = "=1.0.89"
 serde_json = { version = "=1.0.39", features = ["preserve_order"] }
 serde_derive = "=1.0.89"
-hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.22-alpha1" }
-hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.22-alpha1" }
-holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.22-alpha1" }
-holochain_json_derive = { version = "0.0.1-alpha2" }
+hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.23-alpha1" }
+hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.23-alpha1" }
+holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.23-alpha1" }
+holochain_json_derive = { version = "0.0.14" }
 
 [lib]
 path = "src/lib.rs"
